<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:key="@string/pref_temp_units_key"
        android:title="@string/pref_units_label"
        android:defaultValue="@string/pref_temp_units_metric"
        android:entries="@array/pref_temp_units_options"
        android:entryValues="@array/pref_temp_units_value"
         />
</PreferenceScreen>
